MCR-3477 Fixed pmd blank check issue